--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "angular-aria": "^1.5.8",
     "angular-material": "^1.1.0",
     "angular-material-icons": "^0.7.1",
-    "angular-messages": "^1.5.8"
+    "angular-messages": "^1.5.8",
+    "brace": "^0.10.0",
+    "esprima": "^3.1.3",
+    "esquery": "^0.4.0"
   },
   "engines": {
     "node": ">=4.3"
