--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
     "html-loader": "^0.4.3",
+    "json-loader": "^0.5.4",
     "html-webpack-plugin": "^2.22.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "http-server": "^0.9.0",
