--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "homepage": "https://github.com/adrianhdezm/columbus#readme",
   "devDependencies": {
-    "babel-core": "^6.11.4",
+    "babel-standalone": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
